src/test/resources/purescript_examples/failing/TooFewClassInstanceArgs.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ClassInstanceArityMismatch\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Foo')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)('\n\n')
        PSImpliesImpl(Implies)
          <empty list>
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('fooString')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Foo')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('String')
                PsiElement(whitespace)('\n')
